# Order-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  coverage.xml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  django_tests.yml
backend/: __init__.py  admin.py  apps.py  auth_pipeline.py  celery.py  models.py  redis_client.py  signals.py  tasks.py  urls.py  utils.py  views.py
backend/api/: auth_serializers.py  cart_serializers.py  contact_serializers.py  filters.py  order_serializers.py  product_serializers.py  profile_serializers.py  serializers.py  urls.py  views.py
backend/api/v1/: api_views.py  auth_views.py  cart_views.py  contact_views.py  current_user_views.py  order_views.py  product_views.py  profile_views.py  social_auth_views.py  urls.py  views.py
backend/management/commands/: create_initial_shops.py
backend/migrations/: 0001_initial.py  0002_contact.py  0003_remove_shop_website_shop_source_file_shop_state.py  0004_alter_contact_options_remove_contact_address_and_more.py  0005_cart_cartitem.py  0006_alter_contact_options.py  0007_emailconfirmation.py  0008_contact_is_confirmed_and_more.py  0009_alter_contact_options_contact_email_and_more.py  0010_product_detail_view_product_original_image_and_more.py
backend/tests/: test_api_views.py  test_auth_views.py  test_cart_views.py  test_contact_views.py  test_order_views.py  test_throttling.py
data/: shop1.yaml  shop2.yaml  shop3.yaml
frontend/: .env.development  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.js  index.js
frontend/src/api/: api.js
frontend/src/pages/: Dashboard.js  LoginPage.js  socialLoginSuccess.js
orders/: settings.py  urls.py
